Added comments in Child & ParentServer and updated deprecated feature in ChildServer