@@ -5,6 +5,7 @@ import java.net.*;
 import java.util.*;
 import java.io.*;
 
+// Class that handles each child implemtation for game (i.e. each player has their own ChildServer)
 public class ChildServer implements Runnable{
   private AbstractPlayer player;  
   private ParentServer parent;
@@ -22,32 +23,31 @@ public class ChildServer implements Runnable{
     this.playerConnection = playerConnection;
     this.parent = parent;
   }
-
+  // Getters & setters
   public Connection getPlayerConnection(){
     return playerConnection;
   }
   public void setPlayerConnection(Connection playerConnection){
     this.playerConnection = playerConnection;
   }
-
   public ParentServer getParentServer(){
     return parent;
   }
   public void setParentServer(ParentServer parent){
     this.parent = parent;
   }
-
   public AbstractPlayer getPlayer(){
     return player;
   }
-
+  // end of getters & setters
+  // enables ChildServer to be runnable
   @Override
   public void run(){
     long startTime = System.currentTimeMillis();
     //Timeout is Socket's timeout
     long maxTime = (long)(parent.getTURN_WAIT_MINUTES()*60*1000);
     
-    //If player isn't playing or isn't watching then skip
+    //If player isn't playing or isn't watching then skip them
     if(!player.isPlaying()){
       if(!player.isWatching()){
         return;
@@ -55,11 +55,9 @@ public class ChildServer implements Runnable{
     }
     System.out.println(player.getName() + " enter thread");
     ValidatorHelper validator;
-    
     try{
       if(firstCall){
         //Prompt for region --> placement
-        
         //Prompt for region
         while(true){
           //If too long --> kill player
@@ -68,13 +66,11 @@ public class ChildServer implements Runnable{
             playerConnection.closeAll();
             return;
           }
-          //Send board
+          //Send board to player
           playerConnection.sendObject(parent.getBoard());
-        
           //Attempt to get groupName string
           StringMessage groupNameMessage = (StringMessage)(playerConnection.receiveObject());
           String groupName = groupNameMessage.unpacker();
-          
           //Return failure if not assignable
           if(!parent.assignGroups(groupName, player)){
             playerConnection.sendObject(new StringMessage("Fail: Group invalid or already taken."));
@@ -95,7 +91,6 @@ public class ChildServer implements Runnable{
           }
           //Send board
           playerConnection.sendObject(parent.getBoard());
-
           //Retrieve orders
           List<OrderInterface> placementOrders;
           placementOrders = (List<OrderInterface>)(playerConnection.receiveObject());
@@ -108,7 +103,6 @@ public class ChildServer implements Runnable{
             playerConnection.sendObject(new StringMessage("Fail: placements invalid"));
             continue;
           }
-
           parent.addOrdersToMap(placementOrders);
           break;
         }
@@ -125,7 +119,6 @@ public class ChildServer implements Runnable{
         //If alive then expecting orders
         if(parent.playerHasARegion(player)){
           //Prompt for orders --> validate
-        
           while(true){
             //Send board
             playerConnection.sendObject(parent.getBoard());
@@ -147,7 +140,6 @@ public class ChildServer implements Runnable{
           //Otherwise succeed
           playerConnection.sendObject(new StringMessage("Success: orders valid."));
         }
-      
         else{
           //If not alive --> check if watching
           //If watching null then haven't been prompted
@@ -155,7 +147,8 @@ public class ChildServer implements Runnable{
             //Get confirmation message
             ConfirmationMessage spectateMessage = (ConfirmationMessage)(playerConnection.receiveObject());
             //Set watching boolean
-            player.setWatching(new Boolean(spectateMessage.getMessage()));
+            //player.setWatching(new Boolean(spectateMessage.getMessage()));
+            player.setWatching(Boolean.valueOf(spectateMessage.getMessage()));
           }
           //If watching then send board (otherwise client disconnected)
           if(player.isWatching()){
@@ -173,7 +166,6 @@ public class ChildServer implements Runnable{
       playerConnection.closeAll();
       return;
     }
-
     System.out.println(player.getName() + " exiting thread");
   }
 }
